--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body{
     margin:0;
     padding:0;
     font-family: sans-serif;
-    background: url(LoginAuth/image.jpg);
+    background: url(/images/image.jpg);
     background-size:cover;
 }
 .box{
